[package]
name = "wa"
version = "0.0.0"
description = "WA+ = W(eb) + A(pp) + more..."
authors = ["lencx <cxin1314@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/lencx/WA"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = ["isolation"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "devtools", "global-shortcut", "icon-png", "isolation", "macos-private-api", "system-tray", "updater"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.0"
window-vibrancy = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

# # https://github.com/tauri-apps/tauri/discussions/3059
# [profile.release.package.wry]
# debug = false
# debug-assertions = false

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
